[bumpversion]
current_version = 1.3.1
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:wxcast/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[tool:pytest]
testpaths = tests

[flake8]
exclude = docs

[coverage:report]
fail_under = 90

[metadata]
license_file = LICENSE

